--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,6 @@
 ---
 layout: projects
 ---
-
-{% include {{ site.theme-projects }} %}
+<div style="max-width: 88%; padding-top: 0px; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
+  {% include {{ site.theme-projects }} %}
+</div>
